# decide.engine-tools

./: .via-metadata.d.ts  AGENTS.md  AGENTS_MEMORY.md  ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_MEMORY.md  AUDIT_SUMMARY.md  CHANGELOG.md  CLAUDE_PERSONALIZATION_INSTRUCTIONS.md  CONTRIBUTING.md  CONTRIBUTION_WORKFLOW.md  DECIDE_VS_SUPERPOWERS_ANALYSIS.md  FIXES.md  FIXES_SUMMARY.md  FIX_sw.md  GAME_CODEX_GUIDE.md  Highway-V2I dashboard simulation.html  ISSUES.md  ORCHARD_ENGINE_DESIGN.md  PHASE_2_3_IMPLEMENTATION.md  README.md  SELF_SUFFICIENT_STRATEGY.md  TASKS.md  TESTING.md  TOOLS_METADATA_REGISTRY.json  UI_UX_AUDIT_REPORT_2026.md  UI_UX_FIX_TRACKER.md  UNSTOPPABLE_REPO_MANIFESTO.md  _design-tokens.css  _redirects  _shared-utils.js  _ux-patterns.css  agent-builder.html  agent.html  app-generator.html  bootstrap_station.html  constitutional_station.html  continuity_station.html  cta.html  decision-brief-guide.html  (+22 more)
.codex/: instructions.md  session.md
.github/: PULL_REQUEST_TEMPLATE.md
.well-known/: assetlinks.json
Orchade/: Makefile  README.md  setup.sh
StudyOS/: COMPETITIVE_EXAMS_CATEGORY_MIGRATION_PLAN.md  assetlinks.json  index.html  main.tsx  manifest.json  privacy-policy.html  storage.js  sw-registration-snippet.html  sw.js  tool-integration.js  trail-module.html  upsc_base.html
agent/: config.json  (+1 more)
workspace/shared/: pyproject.toml
workspace/shared/corpus_reader/: __init__.py  reader.py
workspace/shared/research_tools/: __init__.py  synthesis.py
workspace/shared/studyos_core/: __init__.py  bridge.py
workspace/shared/ui_components/: __init__.py
(+993 files in other folders)
